--- a/README.Rmd
+++ b/README.Rmd
@@ -1,33 +1,25 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 # rplaywright
 
-rplaywright is an R package developed as part of my participation in the
-[rOpenSci Champions Program](https://ropensci.org/champions/). It is
-designed to seamlessly bridge with the NodeJS library,
-[Playwright](https://playwright.dev/), enabling simplified web testing
-and automation for R users. This package aims to provide R users with a
-comprehensive toolkit for interacting with web browsers
-programmatically, allowing for tasks such as browser automation, web
-scraping, and end-to-end testing directly from within the R environment.
-rplaywright offers a user-friendly interface and robust functionality
-for handling complex web interactions, making it an invaluable tool for
-both beginners and experienced developers alike.
+rplaywright is an R package developed as part of my participation in the [rOpenSci Champions Program](https://ropensci.org/champions/). It is designed to seamlessly bridge with the NodeJS library, [Playwright](https://playwright.dev/), enabling simplified web testing and automation for R users. This package aims to provide R users with a comprehensive toolkit for interacting with web browsers programmatically, allowing for tasks such as browser automation, web scraping, and end-to-end testing directly from within the R environment. rplaywright offers a user-friendly interface and robust functionality for handling complex web interactions, making it an invaluable tool for both beginners and experienced developers alike.
 
 ## Installation
 
-You can install the development version of rplaywright from
-[GitHub](https://github.com/) with:
+You can install the development version of rplaywright from [GitHub](https://github.com/) with:
 
-``` r
+``` {r installation, eval=FALSE}
 # install.packages("devtools")
 devtools::install_github("erikaris/rplaywright")
 ```
 
 ### Usage Example
 
-``` r
+```{r usage, eval=FALSE}
 devtools::load_all()
 
 rplaywright::rplaywright_npm_install()
@@ -55,7 +47,7 @@ rplaywright::rplaywright_stop_server()
 
 ### Use Case Example for Twitter Crawling
 
-``` r
+```{r useCaseTwitterCrawling, eval=FALSE}
 roxygen2::roxygenise()
 
 browser <- rplaywright::rplaywright_browser_new(type = 'chromium') # or firefox or webkit
